Add HTML template and reset CSS

--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,68 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>To Do List</title>
 </head>
 <body>
-  Hello
+  <div class="container-responsive">
+    <aside>
+      <div>
+        <div style="display: inline-block;width: 25px; height: 25px; background-color: gray;"></div>
+        <span>CoolRaccoon</span>
+      </div>
+      <ul>
+        <li>Today</li>
+        <li>Week</li>
+        <li>Month</li>
+        <li>Upcoming</li>
+      </ul>
+      <ul>
+        <li>Urgent</li>
+        <li>Important</li>
+        <li>Not Import</li>
+        <li>Not Urgent</li>
+      </ul>
+      <ul>
+        <li>Work</li>
+        <li>School</li>
+        <li>Home</li>
+      </ul>
+      <div>
+        <button type="button">Add a new carpet</button>
+        <div style="display: inline-block;width: 25px; height: 25px; background-color: gray;"></div>
+      </div>
+    </aside>
+    <main>
+      <div>
+        <div style="display: inline-block;width: 25px; height: 25px; background-color: gray;"></div>
+        <h1>Carpet Title</h1>
+      </div>
+      <!-- Task container-->
+      <div>
+        <div>
+          <div style="display: inline-block;width: 25px; height: 25px; background-color: gray;"></div>
+          <span>Task Title</span>
+          <span>Task Description</span>
+          <div>
+            <span>Date</span>
+            <div style="display: inline-block;width: 25px; height: 25px; background-color: gray;"></div>
+          </div>
+          <div>
+            <span>Priority</span>
+            <div style="display: inline-block;width: 25px; height: 25px; background-color: gray;"></div>
+          </div>
+          <div>
+            <span>Carpet</span>
+            <div style="display: inline-block;width: 25px; height: 25px; background-color: gray;"></div>
+          </div>
+          <div style="display: inline-block;width: 25px; height: 25px; background-color: gray;"></div>
+        </div>
+      </div>
+      <div>
+        <div style="display: inline-block;width: 25px; height: 25px; background-color: gray;"></div>
+        <h2>Add Task</h2>
+      </div>
+    </main>
+  </div>
 </body>
 </html>
